# zxcpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json  zxcpp.hpp
.github/workflows/: ci.yml
cmake/: zxcppConfig.cmake.in
test/: CMakeLists.txt  main.cpp  test_concepts.cpp  test_move.cpp  test_simple.cpp
